@@ -2,6 +2,8 @@
 ======
 - Block panel autohide if the widget is grabbed (bug #4597).
 - Fix dragging to launcher submenu items (bug #4026).
+- Send the event time with startup notification instead
+  of zero, so focus stealing works properly.
 
 4.5.99.1
 ========
